[package]
name = "solana-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
envy = "0.4.2"
futures-util = "0.3.30"
serde = "1.0.204"
serde_json = "1.0.120"
solana-client = "2.0.2"
solana-sdk = "2.0.2"
url = { version = "2.5.2", features = ["serde"] }
tokio = "1.38.0"
solana-transaction-status = "2.0.3"
rusqlite = { version = "0.32.0", features = ["bundled"] }
actix-web = "4"